[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-loop-vibe-coder"
version = "0.3.0"
description = "A beginner-friendly coding-agent loop with guided setup, deterministic verification, and bounded retries."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Stephen McDermott"}]
keywords = ["agents", "coding-agent", "agent-loop", "loop-engineering", "verification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
agent-loop = "agent_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
